avutil/frame: Free destination qp_table_buf in frame_copy_props()

Fixes memleak
Fixes: Ticket4899

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>